--- a/analyzer-lsp-rules/rules/rules-reviewed/azure/azure-password.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/azure/azure-password.windup.yaml
@@ -4,8 +4,7 @@
     when:
       or:
       - builtin.filecontent:
-          filename: application{*}.{extensions}
-          pattern: '{password}'
+          pattern: (password|pwd)
       - builtin.xml:
           xpath: //password
       - builtin.xml:
