--- a/analyzer-lsp-rules/rules/rules-reviewed/camel3/camel2/component-changes.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/camel3/camel2/component-changes.windup.yaml
@@ -8,8 +8,7 @@
     when:
       or:
       - builtin.filecontent:
-          filename: '{*}.java'
-          pattern: .to("kafka:{[^"]+}{options}={*}
+          pattern: .to("kafka:{[^"]+}(circularTopicDetection|bridgeEndpoint)=*
       - java.referenced:
           location: METHOD_CALL
           pattern: org.apache.camel.component.kafka.KafkaConfiguration.(setBridgeEndpoint|setCircularTopicDetection)(*)
