--- a/analyzer-lsp-rules/rules/rules-reviewed/camel3/camel2/xml-removed-components.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/camel3/camel2/xml-removed-components.windup.yaml
@@ -64,8 +64,7 @@
     when:
       or:
       - builtin.filecontent:
-          filename: '{*}.java'
-          pattern: from("twitter-streaming:{*}
+          pattern: from("twitter-streaming:*
       - builtin.xml:
           xpath: //*/c:from/@uri[windup:matches(self::node(), 'twitter-streaming:{*}')]
       - builtin.xml:
