--- a/analyzer-lsp-rules/rules/rules-archived/quarkus1/quarkus1-10/quarkus1-11-logging.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-archived/quarkus1/quarkus1-10/quarkus1-11-logging.windup.yaml
@@ -6,5 +6,4 @@
     ruleID: ../../windup/windup-rulesets/rules/rules-archived/quarkus1/quarkus1-10/quarkus1-11-logging.windup.xml-0
     when:
       builtin.filecontent:
-        filename: application.properties
-        pattern: '{logLevel}'
+        pattern: (.level\s*=\s*(DEBUG|TRACE))
