--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/jsp/jsp.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/jsp/jsp.windup.yaml
@@ -3,5 +3,4 @@
     ruleID: ../../windup/windup-rulesets/rules/rules-reviewed/eap6/jsp/jsp.windup.xml-0
     when:
       builtin.filecontent:
-        filename: '{*}.jsp'
-        pattern: import={emptyString}
+        pattern: import=(""|'')
