--- a/analyzer-lsp-rules/rules/rules-reviewed/eap6/log4j/log4j.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap6/log4j/log4j.windup.yaml
@@ -7,12 +7,10 @@
     tag: []
     when:
       builtin.filecontent:
-        filename: log4j.xml
-        pattern: '{*}'
+        pattern: '*'
   - message: Using ConsoleAppender configured in log4j.{suffix} can cause a deadlock
       on JBoss EAP 6.. It is recommended to Remove application level log4j ConsoleAppenders.
     ruleID: ../../windup/windup-rulesets/rules/rules-reviewed/eap6/log4j/log4j.windup.xml-2
     when:
       builtin.filecontent:
-        filename: log4j.{suffix}
         pattern: org.apache.log4j.ConsoleAppender
