--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap6/hibernate4-xml.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/eap6/hibernate4-xml.windup.yaml
@@ -15,14 +15,12 @@
     ruleID: ../../windup/windup-rulesets/rules/rules-reviewed/eap7/eap6/hibernate4-xml.windup.xml-0
     when:
       builtin.filecontent:
-        filename: hibernate.{file-ext}
         pattern: hibernate.transaction.factory_class
   - message: Use `org.hibernate.id.enhanced.SequenceStyleGenerator` instead.
     ruleID: ../../windup/windup-rulesets/rules/rules-reviewed/eap7/eap6/hibernate4-xml.windup.xml-1
     when:
       builtin.filecontent:
-        filename: '{*}.hbm.xml'
-        pattern: org.hibernate.id.{idclass}
+        pattern: org.hibernate.id.(TableGenerator|TableHiLoGenerator|SequenceGenerator|SequenceIdentityGenerator|SequenceHiLoGenerator)
   - message: Identifier generator {generator} was removed/deprecated in Hibernate
       5. You can use `sequence` generator instead.
     ruleID: ../../windup/windup-rulesets/rules/rules-reviewed/eap7/eap6/hibernate4-xml.windup.xml-2
@@ -39,7 +37,6 @@
       or:
       - as: properties
         builtin.filecontent:
-          filename: hibernate.properties
           pattern: hibernate.hql.bulk_id_strategy=org.hibernate.hql.spi.TemporaryTableBulkIdStrategy
         ignore: true
       - as: cfg
@@ -55,7 +52,6 @@
       or:
       - as: properties
         builtin.filecontent:
-          filename: hibernate.properties
           pattern: hibernate.hql.bulk_id_strategy=org.hibernate.hql.spi.PersistentTableBulkIdStrategy
         ignore: true
       - as: cfg
