--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/weblogic/weblogic.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/weblogic/weblogic.windup.yaml
@@ -116,7 +116,6 @@
     ruleID: ../../windup/windup-rulesets/rules/rules-reviewed/eap7/weblogic/weblogic.windup.xml-12
     when:
       builtin.filecontent:
-        filename: MANIFEST.MF
         pattern: 'Weblogic-Application-Version:'
   - message: WebLogic administrators use wallets created by Oracle Wallet Manager
       to manage public key security credentials on application clients and servers..
@@ -125,7 +124,6 @@
     ruleID: ../../windup/windup-rulesets/rules/rules-reviewed/eap7/weblogic/weblogic.windup.xml-13
     when:
       builtin.filecontent:
-        filename: '{*}.{ext}'
         pattern: oracle.net.wallet_location
   - message: '`weblogic.jndi.WLInitialContextFactory` is an implementation of `InitialContextFactory`
       used to get object instances from JNDI.. The equivalent functionality needs
@@ -135,7 +133,6 @@
     ruleID: ../../windup/windup-rulesets/rules/rules-reviewed/eap7/weblogic/weblogic.windup.xml-14
     when:
       builtin.filecontent:
-        filename: '{*}.{ext}'
         pattern: weblogic.jndi.WLInitialContextFactory
   - message: Weblogic’s implementation of the RMI specification uses a proprietary
       protocol known as T3. T3S is the version of the protocol over SSL.. `t3://`
@@ -146,5 +143,4 @@
     ruleID: ../../windup/windup-rulesets/rules/rules-reviewed/eap7/weblogic/weblogic.windup.xml-15
     when:
       builtin.filecontent:
-        filename: '{*}.{ext}'
-        pattern: '{t3url}'
+        pattern: t3s?://
