--- a/analyzer-lsp-rules/rules/rules-reviewed/eap7/websphere/websphere-mq.windup.yaml
+++ b/analyzer-lsp-rules/rules/rules-reviewed/eap7/websphere/websphere-mq.windup.yaml
@@ -13,7 +13,6 @@
     ruleID: ../../windup/windup-rulesets/rules/rules-reviewed/eap7/websphere/websphere-mq.windup.xml-1
     when:
       builtin.filecontent:
-        filename: '{*}.{ext}'
         pattern: com.ibm.mq.jms.context.WMQInitialContextFactory
   - message: WebSphere `.scp` files contain scripts for the `jmsadmin` program which
       is used. to configure the WebSphere MQ destinations. and routing. To configure
@@ -22,5 +21,4 @@
     ruleID: ../../windup/windup-rulesets/rules/rules-reviewed/eap7/websphere/websphere-mq.windup.xml-2
     when:
       builtin.filecontent:
-        filename: '{*}.scp'
-        pattern: '{*}'
+        pattern: '*'
